# testDialog

./: CMakeLists.txt  README.md  main.cpp  main.qml
